--- a/package.json
+++ b/package.json
@@ -34,8 +34,8 @@
 		"url": "https://twitter.com/mholt6"
 	},
 	"license": "MIT",
-	"main": "papaparse.js",
-	"browser": "papaparse.min.js",
+	"main": "lib/papaparse.js",
+	"browser": "lib/papaparse.min.js",
 	"devDependencies": {
 		"chai": "^4.2.0",
 		"connect": "^3.3.3",
@@ -48,7 +48,7 @@
 		"serve-static": "^1.7.1"
 	},
 	"scripts": {
-		"lint": "eslint --no-ignore papaparse.js Gruntfile.js .eslintrc.js 'tests/**/*.js'",
+		"lint": "eslint --no-ignore lib/papaparse.js Gruntfile.js .eslintrc.js 'tests/**/*.js'",
 		"test-browser": "node tests/test.js",
 		"test-mocha-headless-chrome": "node tests/test.js --mocha-headless-chrome",
 		"test-node": "mocha tests/node-tests.js tests/test-cases.js",
